--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -96,6 +96,9 @@
                                 alert("登录成功");
                                 window.location.href = "main.html";
                             }
+                            else{
+                                alert(data.msg);
+                            }
                         },
 
                         //表示如果请求响应出现错误，会执行的回调函数
