前端-p0级错误

--- a/src/main/resources/static/goodsUpdate.html
+++ b/src/main/resources/static/goodsUpdate.html
@@ -44,8 +44,10 @@
                     url: "http://localhost:8091/dbexp/goods/update/goods", // 请求路径
                     type: "POST", //请求方式
                     data: {
-                        "goodAttributes": goodAttributes , "description": description,
-                        "stock": stock, "originPrice":balance
+                        "goodAttributes": goodAttributes ,
+                        "description": description,
+                        "stock": stock,
+                        "originPrice":balance
                     }, //请求参数
                     async: false,
                     dataType: "json",
