--- a/src/main/resources/static/user.html
+++ b/src/main/resources/static/user.html
@@ -29,7 +29,7 @@
                 var phoneNumber = $("#phoneNumber").val();
 
                 $.ajax({
-                    url: "http://localhost:8091/dbexp/user/query", // 请求路径
+                    url: "http://localhost:8091/dbexp/user/queryMH", // 请求路径
                     type: "POST", //请求方式
                     data: {
                         "phoneNumber": phoneNumber
