--- a/src/main/resources/static/userUpdate.html
+++ b/src/main/resources/static/userUpdate.html
@@ -49,39 +49,9 @@
                             $('#balance').val(data.balance);
 
                             $('.disable').prop('disabled', 'disabled');
-
-                            var money = $('#money').val();
-
-                            //修改余额
-                            $.ajax({
-                                url: "http://localhost:8091/dbexp/user/update", // 请求路径
-                                type: "POST", //请求方式
-                                data: {
-                                    "phoneNumber": phoneNumber,
-                                    "money": money
-                                }, //请求参数
-                                async: false,
-                                dataType: "json",
-
-                                success: function (datas) {
-                                    if (datas.msg == "success") {
-                                        alert('充值成功！');
-                                        if (href.search("user.html")) {
-                                            window.location.href = "user.html";
-                                        } else {
-                                            window.history.go(-1);
-                                        }
-                                    } else {
-                                        alert(datas.data);
-                                        window.location.href = "user.html";
-                                    }
-                                },
-
-                                error: function () {
-                                    alert('充值失败！');
-                                    window.location.href = "user.html";
-                                }
-                            });
+                            $('#user').prop('disabled', 'disabled');
+                            $('#phone').prop('disabled', 'disabled');
+                            $('#balance').prop('disabled', 'disabled');
 
                         } else {
                             alert(datas.data);
@@ -99,7 +69,50 @@
                 window.location.href = "user.html";
             }
 
+
+
+            $("#submit").click(function () {
+                //修改余额
+
+                var phoneNumber = $("#phone").val();
+                var balance = $("#money").val();
+                alert(balance);
+                $.ajax({
+                    url: "http://localhost:8091/dbexp/user/update", // 请求路径
+                    type: "POST", //请求方式
+                    data: {
+                        "phoneNumber": phoneNumber,
+                        "balance": balance,
+                    }, //请求参数
+                    async: false,
+                    dataType: "json",
+
+                    success: function (datas) {
+                        if (datas.msg == "success") {
+                            alert('充值成功！');
+                        } else {
+                            alert(datas.data);
+                        }
+
+                        if (href.search("user.html")) {
+                            window.location.href = "user.html";
+                        } else {
+                            window.history.go(-1);
+                        }
+
+                    },
+
+                    error: function () {
+                        alert('充值失败！');
+                        window.location.href = "user.html";
+                    }
+                });
+            });
+
+
         });
+
+
     </script>
 </head>
 
@@ -109,12 +122,12 @@
         <form action="#" method="post">
             <div class="form-group">
                 <label for="user">用户名：</label>
-                <input type="text" name="userName" class="form-control" id="user" class="disable" />
+                <input type="text" name="userName" class="form-control" id="user" />
             </div>
 
             <div class="form-group">
                 <label for="phone">电话：</label>
-                <input type="text" name="phoneNumber" class="form-control" id="phone" class="disable" />
+                <input type="text" name="phoneNumber" class="form-control" id="phone" />
             </div>
 
             <div class="form-group">
@@ -125,7 +138,7 @@
 
             <div class="form-group">
                 <label for="balance">余额：</label>
-                <input type="text" name="balance" class="form-control" id="balance" class="disable" />
+                <input type="text" name="balance" class="form-control" id="balance" />
             </div>
 
             <div class="form-group">
@@ -134,10 +147,10 @@
             </div>
 
             <hr>
-
         </form>
+
         <div class="form-group" style="text-align: center">
-            <input class="btn btn-primary" type="submit" value="提交" />
+            <input class="btn btn-primary" type="submit" value="提交" id="submit"/>
             <input class="btn btn-default" type="button" value="返回" onclick="javascript:history.go(-1)" />
         </div>
     </div>
