--- a/src/main/resources/static/userAdd.html
+++ b/src/main/resources/static/userAdd.html
@@ -46,14 +46,15 @@
                         data:{"username" : userName, "phoneNumber" : phoneNumber,
                                "gender" : gender, "balance" : balance },//请求参数
 
-                        async: false,
-                        dataType: "json",
+                        // async: false,
+                        // dataType: "json",
 
                         //响应成功后的回调函数
                         success:function (data) {
                             if (data.msg == "success") {
                                 alert("注册成功！");
-                                window.location.href = "main.html";
+                                // window.location.href = "sale.html"
+                                window.history.go(-1);
                             } else {
                                 alert("注册失败，请重新注册！");
                             }
@@ -61,7 +62,7 @@
                         },
                         //表示如果请求响应出现错误，会执行的回调函数
                         error:function () {
-                            alert("注册失败，请重新注册！");
+                            alert("注册失败，请重新注册！响应错误");
                             return;
                         },
                     })
