--- a/src/main/resources/static/goods.html
+++ b/src/main/resources/static/goods.html
@@ -64,7 +64,7 @@
                     },
 
                     error: function () {
-                        alert('不存在该商品！');
+                        alert('响应失败！');
                     },
                 })
 
@@ -102,7 +102,7 @@
                 },
 
                 error: function () {
-                    alert('商品信息删除失败！');
+                    alert('响应失败！');
                 },
             })
         }
