--- a/src/main/resources/static/sale.html
+++ b/src/main/resources/static/sale.html
@@ -172,7 +172,7 @@
                     var flag = false;
 
                     $.ajax({
-                        url: "http://localhost:8091/buyer/buy", // 请求路径
+                        url: "http://localhost:8091/buyer/buyNoVip", // 请求路径
                         type: "POST", //请求方式
                         data: {
                             "goodId": goodId,
