--- a/src/main/resources/static/goodsUpdate.html
+++ b/src/main/resources/static/goodsUpdate.html
@@ -27,7 +27,7 @@
                 $('#goodAttributes').prop('disabled','disabled');
 
                 $('#description').val(description);
-                $('#stock').val(stock);
+                // $('#stock').val(stock);
                 $('#balance').val(balance);
 
                 window.sessionStorage.clear();
