--- a/src/main/resources/static/user.html
+++ b/src/main/resources/static/user.html
@@ -144,11 +144,11 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="../../../../../dbexp-master/src/main/resources/static/sale.html">购买 </a></li>
-                    <li><a href="../../../../../dbexp-master/src/main/resources/static/saleReturn.html">退货</a></li>
+                    <li><a href="sale.html">购买 </a></li>
+                    <li><a href="saleReturn.html">退货</a></li>
                     <li class="active"><a href="user.html">用户信息管理</a></li>
                     <li><a href="goods.html">商品信息管理</a></li>
-                    <li><a href="../../../../../dbexp-master/src/main/resources/static/turnover.html">营业额</a></li>
+                    <li><a href="turnover.html">营业额</a></li>
 
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
